# MemOS

./: .env_liji  .gitignore  .pre-commit-config.yaml  .private-paths  1  AGENTS.md  CLAUDE.md  Dockerfile  E2E_VERIFICATION_ROUND_2.md  Makefile  PATCHES.md  README.md  README_ZH.md  bridge-shutdown-audit.md  plugin.yaml  pyproject.toml  start-memos.sh  start.sh  test.py  test_add_pipeline.py  test_file_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/scripts/: draft-local-plugin-release-notes.mjs  draft-local-plugin-release-notes.test.mjs  retry.sh  validate-release-confirmation.mjs  validate-release-confirmation.test.mjs
.github/workflows/: hermes-plugin-publish.yml  memos-local-plugin-post-merge-dry-run.yml  memos-local-plugin-pre-merge-dry-run.yml  memos-local-plugin-publish.yml  openclaw-plugin-publish.yml  python-release-tests.yml  python-release.yml  python-tests.yml  stale.yml
MMLongBench-Doc/: README.md  run_api.py
MMLongBench-Doc/eval/: eval_score.py
MMLongBench-Doc/models/: internlm_xc2_4khd.py  internvl_chat.py  minicpm_llama3.py
apps/MemOS-Cloud-Hermes-Plugin/: CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  __init__.py  after-install.md  plugin.yaml
apps/memos-copaw-plugin/: memos_client.py  memos_memory_manager.py  plugin.json  plugin.py
apps/memos-local-openclaw/: README.md  index.ts  install.ps1  install.sh  openclaw.plugin.json  package.json  tsconfig.json
apps/memos-local-plugin/: .gitignore  ARCHITECTURE.md  README.md  bridge.cts  bridge.mts  bridge.ts  install.ps1  install.sh  local-pack-install.sh  openclaw.plugin.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
benchmarks/: benchmark_ttft.py  benchmark_ttft_no_cache.py
demos/AOTAI_Hike/: ART.md  INTRODUCTION_EN.md  INTRODUCTION_ZH.md  PRD 2.md  PR_DESCRIPTION.md  README.md
deploy/helm/: values-example.yaml  values.yaml
docker/: .env.example  docker-compose.yml  requirements-full.txt  requirements.txt
docs/: AUTODEV_SMOKE_TEST.md  README.md  openapi.json
evaluation/: .env-example  README.md
evaluation/configs/: mirix_config.yaml
evaluation/configs-example/: mirix_config.yaml
evaluation/scripts/: run_lme_eval.sh  run_locomo_eval.sh  run_pm_eval.sh  run_prefeval_eval.sh  run_rag_eval.sh
examples/: README.md  deepsearch_example.py
examples/api/: product_api.py  server_router_api.py
examples/basic_modules/: llm.py  nebular_example.py  neo4j_example.py  textual_memory_internet_search_example.py  tree_textual_memory_relation_reason_detector.py
examples/core_memories/: general_textual_memory.py  naive_textual_memory.py  tree_textual_memory.py
examples/mem_agent/: deepsearch_example.py  deepsearch_with_api_components.py
examples/mem_api/: pipeline_test.py  server_api_example.md
examples/mem_cube/: dump_cube.py  load_cube.py
examples/mem_feedback/: example_feedback.py
examples/mem_os/: connection_comparison.py  locomo_shared_database_memos.py  multi_user_memos_example.py  persistent_memos_example.py  pooled_connection_example.py  simple_fastmcp_client.py  simple_prefs_memos_product.py  simple_vllm_memos.py
examples/mem_reader/: multimodal_struct_reader.py  reader.py  samples.py
extensions/: README.md
learnings/: 2026-04-06-blind-functionality-audit.md  2026-04-08-disk-and-memory-audit.md
scripts/: check-public-push.sh  check_dependencies.py  sync-public.sh
scripts/tools/: verify_age_fix.py
tests/: test_hello_world.py  test_local_queue_full.py  test_log.py  test_openapi_sync.py  test_searcher_executor_reuse.py  test_utils_timing.py  test_utils_timing_exception_reraise.py
(+1218 files in other folders)
